<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/ic_bg"
    android:paddingHorizontal="30dp"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tvResultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/result"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/desc_trophy"
        app:layout_constraintTop_toBottomOf="@+id/tvResultTitle"
        app:srcCompat="@drawable/ic_trophy" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/congratulations"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvCongratsUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/username"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvUserScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/score"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="#EDDBDB"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCongratsUsername" />

    <Button
        android:id="@+id/btnFinishQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_marginTop="30dp"
        android:background="@android:color/white"
        android:textColor="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserScore" />
</androidx.constraintlayout.widget.ConstraintLayout>